--- a/base/static/base/css/main.css
+++ b/base/static/base/css/main.css
@@ -1,5 +1,5 @@
 body {
-  font-family: "PT Sans", sans-serif;
+  font-family: 'Roboto-Regular', sans-serif;
   background-size: 100%;
     padding: 0;
     background-attachment: fixed;
