--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -4,6 +4,9 @@
 {% block css %}
     <link rel="stylesheet" href="{% static 'users/css/register.css' %}">
     <link rel="shortcut icon" href="{%  static 'users/images/login.png' %}">
+    <script src="https://code.jquery.com/jquery-2.2.4.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.maskedinput/1.4.1/jquery.maskedinput.min.js"></script>
+
 {% endblock %}
 
 {% block content %}
@@ -13,11 +16,14 @@
          <h1>{{title}}</h1>
         {% csrf_token %}
         {{ form.as_p }}
+<!--         <input type="tel" name="username" class="form-input" maxlength="150" required="" id="id_username">-->
         <button class="btn btn-warning" type="submit">Войти</button>
          <a href="{% url 'register' %}">
         <h3 class="registr">(Регистрация)</h3>
     </a>
     </form>
+
+
 
 
 <!--    <form class="register" method="post">-->
@@ -52,6 +58,12 @@
 <!--    </section>-->
 
 </div>
+
+<script>
+$.mask.definitions['h'] = "[0|1|3|4|5|6|7|9]"
+$(".form-input").mask("+7 (h99) 999-99-99");
+
+</script>
 
 {% endblock %}
 
