--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -4,6 +4,8 @@
 {% block css %}
     <link rel="stylesheet" href="{% static 'users/css/register.css' %}">
     <link rel="shortcut icon" href="{%  static 'users/images/register.png' %}">
+    <script src="https://code.jquery.com/jquery-2.2.4.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.maskedinput/1.4.1/jquery.maskedinput.min.js"></script>
 {% endblock %}
 
 {% block content %}
@@ -19,7 +21,10 @@
     </form>
 </div>
 
-
+<script>
+$.mask.definitions['h'] = "[0|1|3|4|5|6|7|9]"
+$("#id_username").mask("+7 (h99) 999-99-99");
+</script>
 
 {% endblock %}
 
